--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,8 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+        # used to reload user from session & other features (e.g. switch_user)
+        # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -16,7 +18,8 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\AppAuthenticator
+            custom_authenticator:
+                - App\Security\Authenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
