--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "doctrine/orm": "^2.13",
         "symfony/asset": "6.1.*",
         "sensio/framework-extra-bundle": "^6.2",
-        "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
@@ -25,6 +24,7 @@
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
+      "ext-http": "*"
         "symfony/security-bundle": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/yaml": "6.1.*",
