--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,11 @@
   },
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.4",
+    "symfony/debug-bundle": "6.1.*",
+    "symfony/maker-bundle": "^1.45",
+    "symfony/stopwatch": "6.1.*",
+    "symfony/var-dumper": "6.1.*",
+    "symfony/web-profiler-bundle": "6.1.*"
     "symfony/maker-bundle": "^1.45"
   },
   "config": {
