--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,7 @@ security:
     app_user_provider:
       entity:
         class: App\Entity\Admin
-        property: mail
+        property: email
     # used to reload user from session & other features (e.g. switch_user)
     # used to reload user from session & other features (e.g. switch_user)
   firewalls:
@@ -21,7 +21,7 @@ security:
       custom_authenticator:
         - App\Security\Authenticator
       logout:
-        path: logout
+        path: app_logout
         # where to redirect after logout
         # target: app_any_route
 
